--- a/WebApplication/pricenegotiator/static/js/my-app/package.json
+++ b/WebApplication/pricenegotiator/static/js/my-app/package.json
@@ -10,6 +10,7 @@
     "react-chat-widget": "^3.1.4",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
