--- a/WebApplication/requirements.txt
+++ b/WebApplication/requirements.txt
@@ -1,4 +1,23 @@
 asgiref==3.5.0
+astroid==2.9.3
+autopep8==1.6.0
 certifi==2020.6.20
+charset-normalizer==2.0.12
 Django==4.0.2
+idna==3.3
+isort==5.10.1
+lazy-object-proxy==1.7.1
+mccabe==0.6.1
+numpy==1.22.2
+pandas==1.4.1
+platformdirs==2.5.1
+pycodestyle==2.8.0
+pylint==2.12.2
+python-dateutil==2.8.2
+pytz==2021.3
+requests==2.27.1
+six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
+urllib3==1.26.8
+wrapt==1.13.3
