--- a/WebApplication/requirements.txt
+++ b/WebApplication/requirements.txt
@@ -4,6 +4,7 @@ autopep8==1.6.0
 certifi==2020.6.20
 charset-normalizer==2.0.12
 Django==4.0.2
+gunicorn==20.1.0
 idna==3.3
 isort==5.10.1
 lazy-object-proxy==1.7.1
@@ -20,4 +21,5 @@ six==1.16.0
 sqlparse==0.4.2
 toml==0.10.2
 urllib3==1.26.8
+whitenoise==6.0.0
 wrapt==1.13.3
